fixed compile mistakes